* Created a generic SaveFileDialog, that uses the Win32.SaveFileDialog.   * Modells:     * SaveFileDialogOptions: Model, that contains the settings required to display the SaveFileDialog.     * SaveFileDialogResult: Model, that returned by the ShowDialogAsync() method of SaveFileDialogService.   * SaveFileDialogUnknownResultTypeException: Exception, which is used, when the DialogResult of Win32.SaveFileDialog cannot be determined.   * SaveFileDialogResultType: Has two states:: OK és CANCEL.   * SaveFileDialogService ShowDialog Method: A function that, using the Win32.SaveFileDialog window and displays a Dialog window with the settings passed in the parameter and then returns a SaveFileDialog Result Model. * Created a static FileFilters Class that contains filter settings that can be used for Dialog Windows.   * FileFilterType: Type, that define what types of filters are found in the application.   * FileFilterModel: Model, that defines a filter type.     * Parameters:       * FilterName: The display name of the filter.       * Filters: The type list for the filter (for example: *.txt, *.docx, etc.).   * FileFilterTypes: Contains all filter types that available in the application.   * GetFileFiltersByFilterTypes Method: Returns the filter models based on the filter types that passed in the parameter. * Created extensions for IReadOnlyDictionary and IReadOlnyList:   * IsNullOrEmpty Method: Indicates whether the specified list or dictionary is null or empty.

--- a/Application.Client/Application.Client.csproj
+++ b/Application.Client/Application.Client.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Windows\Main\Commands\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
