* Outsourced the utilities from Application.Core project to Application.Utilities project.

--- a/Application.Client.Dialogs/Application.Client.Dialogs.csproj
+++ b/Application.Client.Dialogs/Application.Client.Dialogs.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application.Core\Application.Core.csproj" />
+    <ProjectReference Include="..\Application.Client.Core\Application.Client.Core.csproj" />
   </ItemGroup>
 
 </Project>
