* Created a Application.Client.Cache project, and created a Cache Repository interface and a Base Cache Repository in this project, so i implemented a cache repository abstraction. * Created the DocInfoRepository and the necessary models for this repository. * Moved the ApplicationCache implementation from Application.Client.Core to Application.Client.Cache, because the cache is only accessible through the repository. Defined the AddCacheRepsotiries() method in the IServiceCollectionExtension class and called this method in the ConfigureServices() method in App.xaml.cs file.

--- a/Application.Client/Application.Client.csproj
+++ b/Application.Client/Application.Client.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application.Client.Cache\Application.Client.Cache.csproj" />
     <ProjectReference Include="..\Application.Client.Dialogs\Application.Client.Dialogs.csproj" />
     <ProjectReference Include="..\Application.Client.Core\Application.Client.Core.csproj" />
     <ProjectReference Include="..\Application.Utilities\Application.Utilities.csproj" />
