* Modified the ApplicationCacheService GetItem method.   * If the cache item does not exist with this key in the cache that just return null.   * Removed the unnecessary CacheItemNotExistException class. * Added a few new properties to DocInfoDataModel * Created the Application.Client.Services project and created the new DocInfoService.   * This service returns every information from the current used document.   * Registered this service as singleton service in the IServiceCollectionExtension class.   * Removed the unnecessary NotepadStorageService.   * Replaced the NotepadStorageService to DocInfoService in the MainWindowViewModel and replaced every references from NotepadStorageService to DocInfoService. * Moved the DocumentState enum from Application.Client to Application.Client.Cache project.

--- a/Application.Client/Application.Client.csproj
+++ b/Application.Client/Application.Client.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Application.Client.Cache\Application.Client.Cache.csproj" />
     <ProjectReference Include="..\Application.Client.Dialogs\Application.Client.Dialogs.csproj" />
     <ProjectReference Include="..\Application.Client.Core\Application.Client.Core.csproj" />
+    <ProjectReference Include="..\Application.Client.Services\Application.Client.Services.csproj" />
     <ProjectReference Include="..\Application.Utilities\Application.Utilities.csproj" />
   </ItemGroup>
 
