--- a/Application.Client/Application.Client.csproj
+++ b/Application.Client/Application.Client.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Application.Client.Behaviors\Application.Client.Behaviors.csproj" />
     <ProjectReference Include="..\Application.Client.Cache\Application.Client.Cache.csproj" />
     <ProjectReference Include="..\Application.Client.Dialogs\Application.Client.Dialogs.csproj" />
     <ProjectReference Include="..\Application.Client.Core\Application.Client.Core.csproj" />
