* Created the custom Color Dialog box. You can select a background color for the input text box through this dialog box.   * Created the necessarry dialog class with interface, the dialog result type enum with result class-, the necessarry exceptions and finally the dialog options class.   * Registered this dialog in the DI Container like a transient dialog.   * The selected color and registered custom colors save in the cache every time when user press an ok or save button in the dialog box.     * Created the necessary CacheRepository - CacheService - DataModels and extended the CacheKey enum.     * Implemented this logic in the ColorDialog.     * Registered this CacheService in the DI Container like a singleton service. * Added a new menu item (Background color) in the format menu. * Created a new command (BackgroundColorCommand).   * Binded this command with the" Background color" menu item.   * This command open the color dialog box. If the dialog result is OK result, then this command sets the new background color on the input text box.     * Added a new property the InputTextBoxViewModel for the Background property binidng.

--- a/Application.Client.Services/Application.Client.Services.csproj
+++ b/Application.Client.Services/Application.Client.Services.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Application.Client.Cache\Application.Client.Cache.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
