* Refactored the project structure.

--- a/Application.Client.Services/Application.Client.Services.csproj
+++ b/Application.Client.Services/Application.Client.Services.csproj
@@ -5,11 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application.Client.Cache\Application.Client.Cache.csproj" />
+    <Compile Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\Application.Client.Cache\Application.Client.Cache.csproj" />
   </ItemGroup>
 
 </Project>
