--- a/Application.Client/Application.Client.csproj
+++ b/Application.Client/Application.Client.csproj
@@ -17,7 +17,7 @@
     <ProjectReference Include="..\Application.Client.Behaviors\Application.Client.Behaviors.csproj" />
     <ProjectReference Include="..\Application.Client.Cache\Application.Client.Cache.csproj" />
     <ProjectReference Include="..\Application.Client.Dialogs\Application.Client.Dialogs.csproj" />
-    <ProjectReference Include="..\Application.Client.Core\Application.Client.Core.csproj" />
+    <ProjectReference Include="..\Application.Client.Infrastructure\Application.Client.Infrastructure.csproj" />
     <ProjectReference Include="..\Application.Client.Services\Application.Client.Services.csproj" />
     <ProjectReference Include="..\Application.Utilities\Application.Utilities.csproj" />
   </ItemGroup>
