* Created the FindWindow. This window will be contains the find operations in the input text box.   * This window is not finished yet. Now I have only implemented the xaml part.   * Created the necessary ViewModel for window. It is an empty view model yet.   * Created the necessary delegate for the "find next" callback method.   * Created the necessary dialog wrapper class with interface. This interface has two public method (show method, and the callback delegate). This is just a rudimentary phase, but the show method is working.   * Registered this dialog with necessary dependencies in the Service Collection. * Created a FindCommand in the main window view model, and binded this command with the Find Menu Item in the MainWindow.xaml.   * This command displays the find dialog.

--- a/Application.Client.Dialogs/Application.Client.Dialogs.csproj
+++ b/Application.Client.Dialogs/Application.Client.Dialogs.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="FindDialog\Windows\FindWindow.xaml" />
     <None Remove="GoToLineDialog\Windows\GoToLineWindow.xaml" />
   </ItemGroup>
 
@@ -27,6 +28,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Include="FindDialog\Windows\FindWindow.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="GoToLineDialog\Windows\GoToLineWindow.xaml">
       <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
       <SubType>Designer</SubType>
@@ -35,6 +41,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="FindDialog\Windows\FindWindow.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="GoToLineDialog\Windows\GoToLineWindow.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
