--- a/Application.Utilities/Application.Utilities.csproj
+++ b/Application.Utilities/Application.Utilities.csproj
@@ -5,4 +5,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
