--- a/Application.Client.Dialogs/Application.Client.Dialogs.csproj
+++ b/Application.Client.Dialogs/Application.Client.Dialogs.csproj
@@ -17,12 +17,14 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.2.3" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
+    <PackageReference Include="MvvmLightLibsStd10" Version="5.4.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Application.Client.Behaviors\Application.Client.Behaviors.csproj" />
     <ProjectReference Include="..\Application.Client.Converters\Application.Client.Converters.csproj" />
     <ProjectReference Include="..\Application.Client.Infrastructure\Application.Client.Infrastructure.csproj" />
+    <ProjectReference Include="..\Application.Client.Messenger\Application.Client.Messenger.csproj" />
     <ProjectReference Include="..\Application.Client.Services\Application.Client.Services.csproj" />
     <ProjectReference Include="..\Application.Utilities\Application.Utilities.csproj" />
   </ItemGroup>
