--- a/Application.Client.Common/Application.Client.Common.csproj
+++ b/Application.Client.Common/Application.Client.Common.csproj
@@ -3,11 +3,9 @@
   <PropertyGroup>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <AssemblyName>Application.Client.Common</AssemblyName>
+    <RootNamespace>Application.Client.Common</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="5.0.0" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Application.Utilities\Application.Utilities.csproj" />
