* Fixed the nullable properties, referencies. * Add the LangVersion to the Directory.Build.props.

--- a/Application.Client.Common/Application.Client.Common.csproj
+++ b/Application.Client.Common/Application.Client.Common.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<AssemblyName>Application.Client.Common</AssemblyName>
 		<RootNamespace>Application.Client.Common</RootNamespace>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
