--- a/Application.Client.Services/Application.Client.Services.csproj
+++ b/Application.Client.Services/Application.Client.Services.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+	<PropertyGroup>
+	  <Nullable>enable</Nullable>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<Compile Remove="Models\**" />
 		<EmbeddedResource Remove="Models\**" />
