--- a/Application.Client.Behaviors/Application.Client.Behaviors.csproj
+++ b/Application.Client.Behaviors/Application.Client.Behaviors.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+	<PropertyGroup>
+	  <Nullable>enable</Nullable>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.37" />
 	</ItemGroup>
