--- a/Application.Client.Dialogs/Application.Client.Dialogs.csproj
+++ b/Application.Client.Dialogs/Application.Client.Dialogs.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<UseWPF>true</UseWPF>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
