* Added the Guard class.   * This class unifies all ArgumentNullException (or other) in this application through the methods of the class.   * Replaced every "throw new ArgumentNullException" to "Guard method".

--- a/Application.Client.Converters/Application.Client.Converters.csproj
+++ b/Application.Client.Converters/Application.Client.Converters.csproj
@@ -5,4 +5,8 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Application.Utilities\Application.Utilities.csproj" />
+	</ItemGroup>
+
 </Project>
