* Created About window. * Created new Help menu with About menu item. If the user clicked this menu item then the About Window is showing.

--- a/Application.Client.Dialogs/Application.Client.Dialogs.csproj
+++ b/Application.Client.Dialogs/Application.Client.Dialogs.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<None Remove="AboutDialog\Windows\Assets\Images\application-icon.png" />
 		<None Remove="FindDialog\Windows\FindWindow.xaml" />
 		<None Remove="GoToLineDialog\Windows\GoToLineWindow.xaml" />
 		<None Remove="ReplaceDialog\Windows\ReplaceWindow.xaml" />
@@ -27,5 +28,11 @@
 		<ProjectReference Include="..\Application.Client.Messenger\Application.Client.Messenger.csproj" />
 		<ProjectReference Include="..\Application.Client.Services\Application.Client.Services.csproj" />
 		<ProjectReference Include="..\Application.Utilities\Application.Utilities.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Resource Include="AboutDialog\Windows\Assets\Images\application-icon.png">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Resource>
 	</ItemGroup>
 </Project>
